--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="card">
       <div class="input-section">
         <label for="bill">Bill</label>
-        <input id="bill" type="number" class="bill" placeholder="0.00">
+        <input id="bill" type="number" class="bill" placeholder="0">
         <label>Select Tip %</label>
         <div class="grid">
           <div class="tip">5%</div>
@@ -35,7 +35,7 @@
           <label for="num_people" id="label_people">Number of People</label>
           <p id="error">Can't be zero</p>
         </span>
-        <input type="number" id="num_people" class="num_people">
+        <input type="number" id="num_people" class="num_people" placeholder="0">
       </div>
       <div class="result">
         <span>
