--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h3>/ person</h3>
         </span>
         <span class="result-total">$0.00</span>
-        <button type="reset" aria-label="Reset">Reset</button>
+        <button type="reset" aria-label="Reset" disabled>Reset</button>
       </div>
     </main>
   </section>
